--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "cuma-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://canblmz1.github.io/cuma-portfolio",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.19.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
+    "sass": "^1.89.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
